<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="select_locations">Select Locations</string>
    <string name="settings">Settings</string>

    <string name="template_celsius_main_title" translatable="false">%1$d℃ %2$s</string>
    <string name="template_fahrenheit_main_title" translatable="false">%1$d℉ %2$s</string>

    <string name="field_is_day_subtitle">Times of day</string>
    <string name="is_day_true">Day</string>
    <string name="is_day_false">Night</string>

    <string name="field_feels_like_subtitle">Feels like</string>

    <string name="field_condition_subtitle">Condition</string>

    <string name="field_wind_speed_subtitle">Wind speed</string>
    <string name="field_wind_dir_subtitle">Wind Direction</string>

    <string name="field_humidity_subtitle">Humidity</string>

    <string name="field_will_it_rain">Will it rain</string>
    <string name="field_chance_of_rain">Chance of rain</string>

    <string name="field_will_it_snow">Will it snow</string>
    <string name="field_chance_of_snow">Chance of snow</string>

    <string name="field_precipitation_amount">Precipitation amount</string>

    <string name="field_sunrise">Sunrise</string>
    <string name="field_sunset">Sunset</string>
    <string name="field_moonrise">Moonrise</string>
    <string name="field_moonset">Moonset</string>

    <string name="field_pressure_subtitle">Pressure</string>
    <string name="dashboard_title_current">Current</string>
    <string name="dashboard_title_precipitation">Precipitation</string>
    <string name="dashboard_title_astro">Astro</string>
    <string name="dashboard_title_forecast">Forecast</string>

    <string name="main_empty_view_msg">List of locations is empty</string>

    <string name="monday_full">Monday</string>
    <string name="tuesday_full">Tuesday</string>
    <string name="wednesday_full">Wednesday</string>
    <string name="thursday_full">Thursday</string>
    <string name="friday_full">Friday</string>
    <string name="saturday_full">Saturday</string>
    <string name="sunday_full">Sunday</string>

    <string name="january_full">January</string>
    <string name="february_full">February</string>
    <string name="march_full">March</string>
    <string name="april_full">April</string>
    <string name="may_full">May</string>
    <string name="june_full">June</string>
    <string name="july_full">July</string>
    <string name="august_full">August</string>
    <string name="september_full">September</string>
    <string name="october_full">October</string>
    <string name="november_full">November</string>
    <string name="december_full">December</string>

    <string name="widget_current_weather_description">Current weather with clock</string>
    <string name="widget_empty_view_text">Location not found</string>

    <string name="widget_preview_city_name">London</string>
    <string name="widget_preview_current_temp" translatable="false">10°C</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="no_data">No data</string>

</resources>