<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/def_h_padding"
    android:background="@drawable/background_frame"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dashboard_title_astro"
        android:paddingBottom="@dimen/def_v_padding"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"/>


    <com.github.mukiva.feature.dashboard.ui.view.FieldView
        android:id="@+id/fieldSunrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:label="@string/field_sunrise"
        app:image="@drawable/ic_sunrise" />

    <com.github.mukiva.feature.dashboard.ui.view.FieldView
        android:id="@+id/fieldSunset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:label="@string/field_sunset"
        app:image="@drawable/ic_sunrise" />

    <com.github.mukiva.feature.dashboard.ui.view.FieldView
        android:id="@+id/fieldMoonrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:label="@string/field_moonrise"
        app:image="@drawable/ic_night" />

    <com.github.mukiva.feature.dashboard.ui.view.FieldView
        android:id="@+id/fieldMoonset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:label="@string/field_moonset"
        app:image="@drawable/ic_night" />

</LinearLayout>